{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 12,
  "lineage": "5b8c6966-4a39-37fc-48e1-3ca37d367096",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/networkInterfaces/azcloudvm213_z1",
            "internal_domain_name_suffix": "deywg0t1b04ufgssh5dmaqanbh.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/publicIPAddresses/azcloudvm-ip",
                "subnet_id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/virtualNetworks/azcloudvm-vnet/subnets/default"
              }
            ],
            "location": "uksouth",
            "mac_address": "60-45-BD-D2-28-28",
            "name": "azcloudvm213_z1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "azcloudvm",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Compute/virtualMachines/azcloudvm"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/networkInterfaces/azcloudvm213_z1|/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/networkSecurityGroups/azcloudvm-nsg",
            "network_interface_id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/networkInterfaces/azcloudvm213_z1",
            "network_security_group_id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/networkSecurityGroups/azcloudvm-nsg",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/networkSecurityGroups/azcloudvm-nsg",
            "location": "uksouth",
            "name": "azcloudvm-nsg",
            "resource_group_name": "azcloudvm",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "default-allow-ssh",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "2.222.85.179",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMyIpAddressHTTPSInbound",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMyIpAddressHTTPInbound",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/networkSecurityGroups/azcloudvm-nsg/securityRules/AllowMyIpAddressHTTPInbound",
            "name": "AllowMyIpAddressHTTPInbound",
            "network_security_group_name": "azcloudvm-nsg",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "azcloudvm",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-7",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/networkSecurityGroups/azcloudvm-nsg/securityRules/AllowMyIpAddressHTTPSInbound",
            "name": "AllowMyIpAddressHTTPSInbound",
            "network_security_group_name": "azcloudvm-nsg",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "azcloudvm",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-8",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/networkSecurityGroups/azcloudvm-nsg/securityRules/default-allow-ssh",
            "name": "default-allow-ssh",
            "network_security_group_name": "azcloudvm-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "azcloudvm",
            "source_address_prefix": "2.222.85.179",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-9",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/publicIPAddresses/azcloudvm-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.77.67.113",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "azcloudvm-ip",
            "resource_group_name": "azcloudvm",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            },
            "zones": [
              "1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/virtualNetworks/azcloudvm-vnet/subnets/default",
            "name": "default",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azcloudvm",
            "timeouts": {
            },
            "virtual_network_name": "azcloudvm-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6a633119-0e7b-42bd-9a52-3fc6c0400d0f",
            "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/virtualNetworks/azcloudvm-vnet",
            "location": "uksouth",
            "name": "azcloudvm-vnet",
            "resource_group_name": "azcloudvm",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/1da0835b-e77f-431e-a40f-5c626e6d833c/resourceGroups/azcloudvm/providers/Microsoft.Network/virtualNetworks/azcloudvm-vnet/subnets/default",
                "name": "default"
              }
            ],
            "timeouts": {
            }
          }
        }
      ]
    }
  ]
}